# web-server

./: CMakeLists.txt  README.md  boardForm.html  new_format_config
api/create/: 1
conf/: cloudbuild.conf  example.conf
data/data_text/: sample.html
docker/: Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: ApiRequestHandler.h  BlockRequestHandler.h  BoardRequestHandler.h  EchoRequestHandler.h  ErrorRequestHandler.h  HealthRequestHandler.h  HttpParser.h  MIME.h  MockSession.h  RequestHandler.h  RequestHandlerFactory.h  StaticRequestHandler.h  config_parser.h  constants.h  log.h  server.h  session.h
src/: ApiHandlerFactory.cc  ApiRequestHandler.cc  BlockHandlerFactory.cc  BlockRequestHandler.cc  BoardHandlerFactory.cc  BoardRequestHandler.cc  EchoHandlerFactory.cc  EchoRequestHandler.cc  ErrorHandlerFactory.cc  ErrorRequestHandler.cc  HealthHandlerFactory.cc  HealthRequestHandler.cc  HttpParser.cc  MIME.cc  RequestHandler.cc  StaticHandlerFactory.cc  StaticRequestHandler.cc  config_parser.cc  log.cc  server.cc  server_main.cc  session.cc
tests/: MIME_test.cc  api_handler_test.cc  block_handler_test.cc  board_handler_test.cc  board_hdlr_test_badconfig1  board_hdlr_test_badconfig2  config_file_with_paths  config_parser_test.cc  echo_handler_test.cc  error_handler_test.cc  example_config  health_handler_test.cc  http_parser_test.cc  integration_test.sh  new_format_config_for_testing  request_1  server_test.cc  session_test.cc  static_handler_test.cc  static_hdlr_test_badconfig1  static_hdlr_test_badconfig2
tests/curl_expected_res/: expected_curl4  expected_curl6
tests/http_requests/: README  board_createboard_req  board_createnote_req  board_delete_req  board_form_req  board_getboards_req  board_update_req  board_view_req  crud_create_req  crud_delete_req  crud_list_req  crud_read_req  crud_update_req  error_req  health_req  html_req  jpg_big_req  jpg_req  png_req  put_req  text_req  zip_req
tests/integr_test_nc_expected_res/: expected_response10  expected_response11  expected_response12  expected_response14  expected_response15  expected_response17  expected_response18  expected_response19  expected_response2  expected_response20  expected_response21  expected_response3  expected_response4  expected_response5  expected_response6  expected_response7  expected_response8  expected_response9
tests/test_configs/: config_1  config_10  config_11  config_12  config_13  config_14  config_16  config_17  config_18  config_2  config_21  config_22  config_23  config_24  config_25  config_26  config_27  config_28  config_29  config_30  config_31  config_32  config_33  config_34  config_35  config_36  config_5  config_6  config_7  config_9
